// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshots It should render with correct styles if inFocus is false 1`] = `
.emotion-0 {
  font-size: 10px;
  color: red;
}

<button
  className="emotion-0"
  onClick={[Function]}
  onMouseEnter={[MockFunction]}
  onMouseLeave={[MockFunction]}
>
  <Component
    count={0}
  />
</button>
`;

exports[`Button snapshots It should render with correct styles if inFocus is true 1`] = `
.emotion-0 {
  font-size: 10px;
  color: red;
  color: blue;
}

<button
  className="emotion-0"
  onClick={[Function]}
  onMouseEnter={[MockFunction]}
  onMouseLeave={[MockFunction]}
>
  <Component
    count={0}
  />
</button>
`;

exports[`Button snapshots It should update when clicked 1`] = `
.emotion-0 {
  font-size: 10px;
  color: red;
}

<button
  className="emotion-0"
  onClick={[Function]}
  onMouseEnter={[MockFunction]}
  onMouseLeave={[MockFunction]}
>
  <Component
    count={1}
  />
</button>
`;
